[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_line = []

[dependencies]
log = "0.4"
polyhal = { git = "https://github.com/Byte-OS/polyhal.git" }
devices = { git = "https://github.com/Byte-OS/devices.git" }
sync = { git = "https://github.com/Byte-OS/sync.git" }